scripts/nullness/original/url2e4fca7217_mark_lacdao_RPGClient_tgz-pJ8-org_nerv_rpgclient_MainJ8.txt
../original/url2e4fca7217_mark_lacdao_RPGClient_tgz-pJ8-org_nerv_rpgclient_MainJ8/src/org/nerv/rpgclient/monster/Monster.java:15: error: [initialization.field.uninitialized] the default constructor does not initialize field id
    private Long id;
                 ^
../original/url2e4fca7217_mark_lacdao_RPGClient_tgz-pJ8-org_nerv_rpgclient_MainJ8/src/org/nerv/rpgclient/monster/Monster.java:54: error: [return] incompatible types in return.
        return null;
               ^
  type of expression: null (NullType)
  method return type: @Initialized @NonNull List<@Initialized @NonNull Item>
../original/url2e4fca7217_mark_lacdao_RPGClient_tgz-pJ8-org_nerv_rpgclient_MainJ8/src/org/nerv/rpgclient/RpgObject.java:12: error: [initialization.field.uninitialized] the default constructor does not initialize field name
    private String name;
                   ^
../original/url2e4fca7217_mark_lacdao_RPGClient_tgz-pJ8-org_nerv_rpgclient_MainJ8/src/org/nerv/rpgclient/RpgObject.java:13: error: [initialization.field.uninitialized] the default constructor does not initialize field stats
    private Stats stats;
                  ^
../original/url2e4fca7217_mark_lacdao_RPGClient_tgz-pJ8-org_nerv_rpgclient_MainJ8/src/org/nerv/rpgclient/RpgObject.java:14: error: [initialization.field.uninitialized] the default constructor does not initialize field alive
    private Boolean alive;
                    ^
../original/url2e4fca7217_mark_lacdao_RPGClient_tgz-pJ8-org_nerv_rpgclient_MainJ8/src/org/nerv/rpgclient/RpgObject.java:44: error: [return] incompatible types in return.
            return null;
                   ^
  type of expression: null (NullType)
  method return type: @Initialized @NonNull Boolean
../original/url2e4fca7217_mark_lacdao_RPGClient_tgz-pJ8-org_nerv_rpgclient_MainJ8/src/org/nerv/rpgclient/player/Job.java:62: error: [return] incompatible types in return.
            return null;
                   ^
  type of expression: null (NullType)
  method return type: @Initialized @NonNull Skill
../original/url2e4fca7217_mark_lacdao_RPGClient_tgz-pJ8-org_nerv_rpgclient_MainJ8/src/org/nerv/rpgclient/Skill.java:19: error: [initialization.fields.uninitialized] the constructor does not initialize fields: name, damage, recovery, statusEffect, mpCost
    public Skill(EffectType type) {
           ^
../original/url2e4fca7217_mark_lacdao_RPGClient_tgz-pJ8-org_nerv_rpgclient_MainJ8/src/org/nerv/rpgclient/Stats.java:8: error: [initialization.field.uninitialized] the default constructor does not initialize field maxHp
    private Long maxHp;
                 ^
../original/url2e4fca7217_mark_lacdao_RPGClient_tgz-pJ8-org_nerv_rpgclient_MainJ8/src/org/nerv/rpgclient/Stats.java:9: error: [initialization.field.uninitialized] the default constructor does not initialize field hp
    private Long hp;
                 ^
../original/url2e4fca7217_mark_lacdao_RPGClient_tgz-pJ8-org_nerv_rpgclient_MainJ8/src/org/nerv/rpgclient/Stats.java:10: error: [initialization.field.uninitialized] the default constructor does not initialize field str
    private Long str;
                 ^
../original/url2e4fca7217_mark_lacdao_RPGClient_tgz-pJ8-org_nerv_rpgclient_MainJ8/src/org/nerv/rpgclient/Stats.java:11: error: [initialization.field.uninitialized] the default constructor does not initialize field def
    private Long def;
                 ^
../original/url2e4fca7217_mark_lacdao_RPGClient_tgz-pJ8-org_nerv_rpgclient_MainJ8/src/org/nerv/rpgclient/Stats.java:12: error: [initialization.field.uninitialized] the default constructor does not initialize field atk
    private Long atk;
                 ^
../original/url2e4fca7217_mark_lacdao_RPGClient_tgz-pJ8-org_nerv_rpgclient_MainJ8/src/org/nerv/rpgclient/Stats.java:13: error: [initialization.field.uninitialized] the default constructor does not initialize field maxMp
    private Long maxMp;
                 ^
../original/url2e4fca7217_mark_lacdao_RPGClient_tgz-pJ8-org_nerv_rpgclient_MainJ8/src/org/nerv/rpgclient/Stats.java:14: error: [initialization.field.uninitialized] the default constructor does not initialize field mp
    private Long mp;
                 ^
../original/url2e4fca7217_mark_lacdao_RPGClient_tgz-pJ8-org_nerv_rpgclient_MainJ8/src/org/nerv/rpgclient/item/Item.java:16: error: [initialization.fields.uninitialized] the constructor does not initialize fields: name, equipable, rarity
    public Item() {
           ^
../original/url2e4fca7217_mark_lacdao_RPGClient_tgz-pJ8-org_nerv_rpgclient_MainJ8/src/org/nerv/rpgclient/item/Item.java:17: error: [method.invocation] call to setEquipable(java.lang.Boolean) not allowed on the given receiver.
        setEquipable(false);
                    ^
  found   : @UnderInitialization @NonNull Item
  required: @Initialized @NonNull Item
../original/url2e4fca7217_mark_lacdao_RPGClient_tgz-pJ8-org_nerv_rpgclient_MainJ8/src/org/nerv/rpgclient/player/Player.java:15: error: [initialization.field.uninitialized] the default constructor does not initialize field id
    private Long id;
                 ^
../original/url2e4fca7217_mark_lacdao_RPGClient_tgz-pJ8-org_nerv_rpgclient_MainJ8/src/org/nerv/rpgclient/player/Player.java:16: error: [initialization.field.uninitialized] the default constructor does not initialize field job
    private Job job;
                ^
19 errors
